[project]
name = "meeting-transcript-processing-v2"
version = "0.1.0"
description = "LangGraph workflow to transform meeting transcripts into documentation"
requires-python = ">=3.9"
dependencies = [
  "langgraph>=0.6.7",
  "langchain-core>=0.3.76",
  "pydantic>=2.11",
  # Model providers
  "langchain-google-genai>=2.1.0",
  "google-generativeai>=0.8.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.0",
]

[tool.uv]
dev-dependencies = []

